--- a/ios/Podfile
+++ b/ios/Podfile
@@ -61,10 +61,17 @@ post_install do |installer|
 
         'PERMISSION_APP_TRACKING_TRANSPARENCY=1',
         'PERMISSION_MICROPHONE=1',
+        'PERMISSION_LOCATION=1',
       ]
 
       config.build_settings['SWIFT_STRICT_CONCURRENCY'] = 'targeted'
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = $iOSVersion
+    end
+
+    if target.name == "geolocator_apple"
+      target.build_configurations.each do |config|
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', 'BYPASS_PERMISSION_LOCATION_ALWAYS=1']
+      end
     end
   end
 end
