--- a/ios/Flutter/prodDebug.xcconfig
+++ b/ios/Flutter/prodDebug.xcconfig
@@ -1,4 +1,4 @@
-#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug-prod.xcconfig"
 #include "Generated.xcconfig"
 
 ASSET_PREFIX=prod
