--- a/ios/Podfile
+++ b/ios/Podfile
@@ -62,6 +62,7 @@ post_install do |installer|
         'PERMISSION_APP_TRACKING_TRANSPARENCY=1',
         'PERMISSION_MICROPHONE=1',
         'PERMISSION_LOCATION=1',
+        'PERMISSION_CAMERA=1',
       ]
 
       config.build_settings['SWIFT_STRICT_CONCURRENCY'] = 'targeted'
