--- a/android/.gitignore
+++ b/android/.gitignore
@@ -4,10 +4,13 @@ gradle-wrapper.jar
 /gradlew
 /gradlew.bat
 /local.properties
+/app/.cxx
 GeneratedPluginRegistrant.java
 
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
 key.properties
-# **/*.keystore
-# **/*.jks
+**/*.keystore
+**/*.jks
+
+!app/debug.keystore
