--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: backyard
 description: "My Backyard USA"
 publish_to: "none"
-version: 2.2.3+0
+version: 2.2.4+0
 
 environment:
   flutter: ">=3.29.2 <4.0.0"
@@ -144,7 +144,7 @@ flavorizr:
       app:
         name: "[Stg]Backyard"
       android:
-        applicationId: "com.app.mybackyardusa.stg"
+        applicationId: "com.app.mybackyardusa1.stg"
         firebase:
           config: ".firebase/stg/google-services.json"
       ios:
