--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.celect.mybackyardapp</string>
+	<string>com.celect.mybackyardapp.stg</string>
 	<key>PROJECT_ID</key>
 	<string>my-backyard-usa</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:778233061802:ios:785085c0f01788d2eecbd3</string>
+	<string>1:778233061802:ios:1c55c4b4fe6cf649eecbd3</string>
 </dict>
 </plist>
